Made changes to the header, fixed search bar overlapping the nav links issue

--- a/resources/style.css
+++ b/resources/style.css
@@ -20,10 +20,10 @@ header{
     display: flex;
     flex-direction:row;
     list-style-type: none;
-   gap: 2rem;
+    gap: 1rem;
+    white-space: nowrap;
 }
 .nav-link{
-    display: flex;
     font-size: 1rem;
     color: white;
     text-decoration: none;
@@ -34,22 +34,24 @@ header{
 
 }
 .nav-link:active{
-    color: black;
+    color: gray;
 
 }
 .logo{
-    width: 10rem;
+     min-width: 8rem;
     height: auto;
-    padding: 0 1.5rem .5rem .5rem
+    padding: 0 1.5rem .5rem 2.5rem;
 }
-.search-cart{
-    position: absolute;
-    right: 5rem;
-
+.search-bar{
+    display: flex;
+   justify-content: flex-end;
+    width: 100%;
+    padding-left: 1rem;
+    margin-right: 2.5rem;
 }
  input.search{
-    width: 250px;
-    height: 30px;
+    width: 11rem;
+    height: 1.5rem;
     border-radius: 15px;
 }
 .search{
@@ -58,7 +60,6 @@ header{
 .cart{
     width: 1.5rem;
     height: auto;
-    position: absolute;
     right: 3rem;
 }
 
@@ -74,21 +75,21 @@ header{
   }
 .asset-donation2{
     position: relative;
-    width: 25rem;
+    max-width: 25rem;
     height: auto;
     padding: 2rem 2rem 2rem 1rem;
 }
 
 .donation-form{
-    height: 40px;
     border-radius: 30px;
-    padding-top: 10rem;
+    padding-top: 13rem;
     padding-right: 1rem;
 }
 .donation-form h2{
     font-size: 3rem;
     color:#7AB0CD;
     padding-bottom: 1.5rem;
+    max-width: 100%;
 }
 input{
     font-size: .65rem;
@@ -135,6 +136,7 @@ form{
     font-size: 2.5rem;
     background-color: #202C39;
     margin-bottom: 2rem;
+    letter-spacing: .05rem;
 }
 
 /*subscribe section*/
@@ -151,8 +153,7 @@ form{
 }
 
 .subscribe-img{
-    position: relative;
-    width: 25rem;
+    max-width: 25rem;
     height: auto;
     padding-left: 1rem;
     padding-bottom: 5rem;
